added v1TimeString
