# argocd/models/v1_time_string.go
@@ -1,0 +1,27 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+)
+
+// V1TimeString v1TimeString is a string representation of v1Time, to fix compilation errors
+//
+// swagger:model v1TimeString
+type V1TimeString string
+
+// Validate validates this v1 time string
+func (m V1TimeString) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this v1 time string based on context it is used
+func (m V1TimeString) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
